<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/highscore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddPlayers">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterNames"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/playerOne"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/ic_xicon"
                android:drawablePadding="8dp"
                android:hint="@string/EnterPlayerOne"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/playerTwo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/ic_oicon"
                android:drawablePadding="10dp"
                android:hint="@string/EnterPlayerTwo"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/startGameButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/StartGame"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/highestScoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/HighestScore"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>