<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/container"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/highestScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/PlayerOne"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ximage" />

            <TextView
                android:id="@+id/playerOneScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/PlayeroneScore"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerTwoLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/PlayerTwo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/oimage" />

            <TextView
                android:id="@+id/playerTwoScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/PlayerTwoScore"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image10"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">


            <ImageView
                android:id="@+id/image11"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image12"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image13"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image14"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image15"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image16"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image17"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image18"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image19"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image20"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image21"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image22"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image23"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image24"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image25"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:padding="20dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>